microapp-deploy/frontend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployement
  labels:
    app: frontend-react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: taobrmd/frontend:2.0.0
        ports:
        - containerPort: 3000
