microapp-deploy/order-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployement
  labels:
    app: order-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: taobrmd/order-service:2.0.0
        ports:
        - containerPort: 3002
