microapp-deploy/user-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployement
  labels:
    app: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: taobrmd/user-service:2.0.0
        ports:
        - containerPort: 3001
